# IB_MCP

.cursor/: mcp.json
mcp_server/: pyproject.toml
mcp_server/routers/: alerts.py  contract.py  fa_allocation_management.py  fyis_and_notifications.py  market_data.py  orders.py  portfolio.py  scanner.py  watchlists.py
