[project]
name = "ib-fastmcp-server"
version = "0.1.0"
description = "FastMCP server for Interactive Brokers Web API"
authors = [
    {name = "Ruben Contesti", email = "rcontesti@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5",
    "fastapi>=0.128.7",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "urllib3>=2.6.3",
    "mcp>=1.26.0",
    "aiohttp>=3.13.3",
    "pydantic>=2.12.5,<3.0.0",
]

[dependency-groups]
dev = []
